--- a/src/collective/easyform/locales/collective.easyform.pot
+++ b/src/collective/easyform/locales/collective.easyform.pot
@@ -1,6 +1,6 @@
-# --- PLEASE EDIT THE LINES BELOW CORRECTLY ---
-# SOME DESCRIPTIVE TITLE.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+#--- PLEASE EDIT THE LINES BELOW CORRECTLY ---
+#SOME DESCRIPTIVE TITLE.
+#FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
@@ -42,7 +42,7 @@ msgstr ""
 msgid "Advanced"
 msgstr ""
 
-#: collective/easyform/browser/controlpanel.py:28
+#: collective/easyform/browser/controlpanel.py:20
 #: collective/easyform/profiles/default/registry.xml
 msgid "Allowed Fields"
 msgstr ""
@@ -90,6 +90,10 @@ msgstr ""
 
 #: collective/easyform/profiles/default/actions.xml
 msgid "Export"
+msgstr ""
+
+#: collective/easyform/interfaces/fields.py:94
+msgid "Field depends on"
 msgstr ""
 
 #: collective/easyform/interfaces/easyform.py:90
@@ -166,7 +170,7 @@ msgstr ""
 msgid "Thanks Page"
 msgstr ""
 
-#: collective/easyform/browser/controlpanel.py:29
+#: collective/easyform/browser/controlpanel.py:21
 #: collective/easyform/profiles/default/registry.xml
 msgid "This Fields are available for your forms."
 msgstr ""
