--- a/src/collective/easyform/locales/nl/LC_MESSAGES/collective.easyform.po
+++ b/src/collective/easyform/locales/nl/LC_MESSAGES/collective.easyform.po
@@ -43,7 +43,7 @@ msgstr "Adressering"
 msgid "Advanced"
 msgstr "Geavanceerd"
 
-#: collective/easyform/browser/controlpanel.py:28
+#: collective/easyform/browser/controlpanel.py:20
 #: collective/easyform/profiles/default/registry.xml
 msgid "Allowed Fields"
 msgstr "Toegestane velden"
@@ -51,7 +51,7 @@ msgstr "Toegestane velden"
 #: collective/easyform/browser/controlpanel.py:42
 #: collective/easyform/browser/saveddata_form.pt:34
 msgid "CSV delimiter"
-msgstr ""
+msgstr "CSV-scheidingsteken"
 
 #: collective/easyform/browser/saveddata_form.pt:37
 msgid "CSV delimiter is required."
@@ -92,6 +92,10 @@ msgstr "Bewerk XML veldenmodel"
 #: collective/easyform/profiles/default/actions.xml
 msgid "Export"
 msgstr "Exporteer"
+
+#: collective/easyform/interfaces/fields.py:94
+msgid "Field depends on"
+msgstr ""
 
 #: collective/easyform/interfaces/easyform.py:90
 msgid "Fields Model"
@@ -161,13 +165,17 @@ msgstr "Opslag"
 
 #: collective/easyform/browser/controlpanel.py:44
 msgid "Set the default delimiter for CSV download."
-msgstr ""
+msgstr "Stel het standaardscheidingsteken in voor CSV-downloads"
+
+#: collective/easyform/browser/controlpanel.py:39
+msgid "Set the maximum filesize (in bytes) that users should be able to upload."
+msgstr "Maximale grootte (in bytes) voor bestanden die kunnen worden opgeladen"
 
 #: collective/easyform/interfaces/easyform.py:117
 msgid "Thanks Page"
 msgstr "'Bedankt' pagina"
 
-#: collective/easyform/browser/controlpanel.py:29
+#: collective/easyform/browser/controlpanel.py:21
 #: collective/easyform/profiles/default/registry.xml
 msgid "This Fields are available for your forms."
 msgstr "Deze velden zijn beschikbaar voor het formulier"
